# cargo-mend

./: CHANGELOG.md  Cargo.toml  README.md  architecture-fix.md  build.rs  mend.toml  rust-toolchain.toml  rustfmt.toml
.claude/config/: release.toml
.claude/scripts/release/: install_verify.sh
.github/scripts/: validate-ci.sh
.github/workflows/: ci.yml
docs/: source_modules_v2.md
docs/plans/: module-split-finding-1.md  prelude-pub-mod-exemption.md
docs/style/: diagnostic-lifecycle.md  narrowing-reachability.md  readme-diagnostic-section.md  stable-toolchain-install.md  style-guide-tooling-lines.md
roadmap/: style-coverage.md
src/: cargo_json.rs  cli.rs  compiler.rs  config.rs  constants.rs  diagnostics.rs  display_filter.rs  field_visibility_fix.rs  fix_support.rs  imports.rs  inline_path_qualified_type.rs  main.rs  module_paths.rs  narrow_pub_crate.rs  outcome.rs  prefer_module_import.rs  pub_use_fixes.rs  render.rs  run_mode.rs  runner.rs  rust_syntax.rs  scan.rs  selection.rs
src/compiler/: build.rs  constants.rs  driver.rs  exposure.rs  facade.rs  mod.rs  persistence.rs  settings.rs  source_cache.rs  tests.rs  visibility.rs
src/compiler/exposure/: detect.rs  mod.rs  visitor.rs
src/compiler/facade/: boundary.rs  exports.rs  mod.rs  reference.rs
src/compiler/persistence/: cache.rs  caller_aware.rs  intersection.rs  load.rs  mod.rs  schema.rs  sink.rs  visibility_priority.rs
src/compiler/visibility/: field.rs  field_visibility.rs  mod.rs  policy.rs  scan.rs  source.rs  use_sites.rs
src/compiler/visibility/scan/: analyze.rs  classify.rs  finding_params.rs  mod.rs  record.rs  visibility_context.rs  visit.rs
src/config/: cli.rs  constants.rs  diagnostic_code.rs  diagnostic_status.rs  diagnostics_config.rs  global.rs  loaded.rs  mod.rs  prelude_pub_mod.rs  run_mode.rs
src/config/cli/: fix.rs  mod.rs  raw.rs  target.rs
src/fixes/: constants.rs  field_visibility.rs  imports.rs  imports_at_top.rs  inline_path_qualified_type.rs  mod.rs  narrow_pub_crate.rs  runner.rs  unused_pub.rs
src/fixes/imports/: apply.rs  conditional_attributes.rs  import_scan.rs  mod.rs  path.rs  scan.rs  use_binding.rs
src/fixes/imports_at_top/: in_body_use_finder.rs  mod.rs  scan.rs
src/fixes/inline_path_qualified_type/: mod.rs  offsets.rs  process.rs  scan.rs  scope.rs  visitor.rs
src/fixes/prefer_module_import/: function_imports.rs  inline_calls.rs  mod.rs  references.rs  scan.rs  shared.rs  support.rs
src/fixes/pub_use_fixes/: mod.rs  parent_boundary.rs  scan.rs  validated_plan.rs
src/fixes/runner/: apply.rs  combine.rs  execute.rs  mend_runner.rs  mod.rs  notices.rs  plan.rs
src/prefer_module_import/: function_imports.rs  inline_calls.rs  mod.rs  references.rs  scan.rs  shared.rs
src/pub_use_fixes/: mod.rs  parent_boundary.rs  parent_export.rs  plan.rs  rewrite.rs  scan.rs  validated_plan.rs
src/reporting/: cargo_json.rs  colors.rs  constants.rs  diagnostics.rs  mod.rs  outcome.rs  render.rs
src/reporting/render/: color.rs  diagnostic.rs  human.rs  mod.rs  summary.rs  timing.rs  types.rs
src/selection/: constants.rs  display_filter.rs  metadata.rs  mod.rs
tests/: cli_smoke.rs  diagnostics.rs
tests/common/: helpers.rs  mod.rs  types.rs
tests/diagnostics/: allowances.rs  field_visibility_wider_than_type.rs  forbidden_pub_crate.rs  import_fixes.rs  imports_at_top.rs  inline_path_fixes.rs  mod.rs  narrow_pub_crate.rs  prefer_module_import.rs  prelude_pub_mod.rs  pub_use_fixes.rs  rendering.rs  unused_pub.rs
tests/support/: diagnostics.rs  mend_json.rs  mod.rs  report.rs
