[package]
authors    = ["natepiano"]
edition    = "2024"
homepage   = "https://github.com/natepiano/cargo-mend"
keywords   = ["cargo", "lints"]
name       = "cargo-mend"
repository = "https://github.com/natepiano/cargo-mend"
version    = "0.1.0"

[lints.clippy]
all                     = { level = "deny", priority = -1 }
cargo                   = { level = "deny", priority = -1 }
cargo_common_metadata   = "allow"
expect_used             = "deny"
multiple_crate_versions = "allow"
nursery                 = { level = "deny", priority = -1 }
panic                   = "deny"
pedantic                = { level = "deny", priority = -1 }
unwrap_used             = "deny"

[dependencies]
anyhow         = "1.0"
cargo_metadata = "0.23"
clap           = { version = "4.5", features = ["derive"] }
once_cell      = "1.21"
proc-macro2    = { version = "1.0", features = ["span-locations"] }
regex          = "1.12.3"
serde          = { version = "1.0", features = ["derive"] }
serde_json     = "1.0"
syn            = { version = "2.0", features = ["full", "visit"] }
tempfile       = "3.26.0"
toml           = "1.0.6"
walkdir        = "2.5"
