[package]
authors     = ["natepiano"]
categories  = ["development-tools::cargo-plugins"]
description = "Opinionated visibility auditing for Rust crates and workspaces"
edition     = "2024"
homepage    = "https://github.com/natepiano/cargo-mend"
keywords    = ["cargo", "lints", "visibility"]
license     = "MIT OR Apache-2.0"
name        = "cargo-mend"
repository  = "https://github.com/natepiano/cargo-mend"
version     = "0.12.0"

[[test]]
name = "diagnostics"
path = "tests/diagnostics/mod.rs"

[lints.clippy]
all                             = { level = "deny", priority = -1 }
allow_attributes_without_reason = "deny"
cargo                           = { level = "deny", priority = -1 }
expect_used                     = "deny"
multiple_crate_versions         = "allow"
nursery                         = { level = "deny", priority = -1 }
panic                           = "deny"
pedantic                        = { level = "deny", priority = -1 }
redundant_pub_crate             = "allow"                           # cargo mend is the visibility authority, not clippy
self_named_module_files         = "deny"                            # use module/mod.rs (directory form) when a module has submodules
unreachable                     = "deny"
unwrap_used                     = "deny"

[dependencies]
anyhow         = "1.0"
cargo_metadata = "0.23"
clap           = { version = "4.6.1", features = ["derive"] }
dirs           = "6.0"
once_cell      = "1.21"
proc-macro2    = { version = "1.0", features = ["span-locations"] }
quote          = "1.0"
regex          = "1.12.3"
serde          = { version = "1.0", features = ["derive"] }
serde_json     = "1.0"
syn            = { version = "2.0", features = ["full", "visit"] }
tempfile       = "3.27.0"
toml           = "1.1.2"
walkdir        = "2.5"
